# mini_languages

./: README.md
intlang/: CMakeLists.txt  README.md  vcpkg-configuration.json
intlang/intlang/: CMakeLists.txt  ast_processor.cpp  ast_processor.hpp  code_generator.cpp  code_generator.hpp  compile_file.cpp  compile_file.hpp  compiler_error.hpp  expr.hpp  parse_tree.hpp  parser.cpp  parser.hpp  processed_ast.hpp  scanner.cpp  scanner.hpp  token.hpp  try_macros.hpp  try_macros_undef.hpp
intlang/tests/: CMakeLists.txt  gtest_printing.hpp  test_code_generator.cpp  test_parser.cpp  test_scanner.cpp
printlang/: .clang-format  CMakeLists.txt  README.md
printlang/printlang/: CMakeLists.txt  code_generator.cpp  code_generator.hpp  compile_file.cpp  compile_file.hpp  compiler_error.hpp  compiler_output.hpp  file_offset.hpp  file_position.hpp  parse_tree.hpp  parser.cpp  parser.hpp  print_stmt.hpp  scanner.cpp  scanner.hpp  source_file.hpp  token.hpp  token_length.hpp  token_type.hpp
printlang/tests/: CMakeLists.txt  gtest_printing.hpp  test_code_generator.cpp  test_parser.cpp  test_scanner.cpp
s_expr_int_calculator/: .gitignore  CMakeLists.txt  CMakePresets.json  nv.natvis  vcpkg-configuration.json  vcpkg.json
s_expr_int_calculator/s_expr_int_calculator/: CMakeLists.txt  code_generator.cpp  code_generator.hpp  compile_file.cpp  compile_file.hpp  expr_processor.cpp  expr_processor.hpp  parser.cpp  parser.hpp  s_expr.hpp  s_expr_int_calculator.cpp  s_expr_int_calculator.h  scanner.cpp  scanner.hpp  token.hpp  typedefs.hpp
s_expr_int_calculator/tests/: CMakeLists.txt  test_scripts.cpp
